# avdecc-lib

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile-public_lib  LICENSE  README.md  astyle_code_format.txt  astyle_code_style.txt  clang_format_style.sh  git_dev_seq_uml.txt  publish_doxygen.sh  travis.sh
controller/: CMakeLists.txt
controller/app/: CMakeLists.txt
controller/app/cmdline/: CMakeLists.txt
controller/app/cmdline/src/: avdecc_controller_cmd_line.cpp  avdecc_controller_cmd_line.h  avdecc_controller_cmd_line_main.cpp  cli_argument.cpp  cli_argument.h  cli_command.cpp  cli_command.h  cli_command_format.cpp  cli_command_format.h  cmd_line.cpp  cmd_line.h  cmd_line_help.cpp  cmd_line_help.h  cmd_line_main.cpp
controller/app/cmdline/src/msvc/: getopt.c  getopt.h
controller/app/test/: CMakeLists.txt
controller/app/test/aecp/: aecp.cpp  aecp.h
controller/app/test/cmd_line/: avdecc_controller_cmd_line_main.cpp
controller/app/test/logging/: log_main.cpp
controller/app/test/notify/: notification_main.cpp
controller/app/test/stream_formats/: CMakeLists.txt  avdecc_stream_formats_main.cpp
controller/app/test/strings/: avdecc_string_main.cpp
controller/lib/: CMakeLists.txt
controller/lib/doc/diagrams/: classes.txt
controller/lib/include/: aem_string.h  audio_cluster_descriptor.h  audio_cluster_descriptor_response.h  audio_map_descriptor.h  audio_map_descriptor_response.h  audio_unit_descriptor.h  audio_unit_descriptor_response.h  audio_unit_get_sampling_rate_response.h  avb_counters_response.h  avb_interface_descriptor.h  avb_interface_descriptor_response.h  avb_interface_get_avb_info_response.h  avdecc-lib_build.h  build.h  clock_domain_counters_response.h  clock_domain_descriptor.h  clock_domain_descriptor_response.h  clock_domain_get_clock_source_response.h  clock_source_descriptor.h  clock_source_descriptor_response.h  configuration_descriptor.h  control_descriptor.h  control_descriptor_get_jdks_ipv4_control_response.h  control_descriptor_response.h  controller.h  descriptor_base.h  descriptor_base_get_name_response.h  descriptor_field.h  descriptor_field_flags.h  descriptor_response_base.h  end_station.h  entity_counters_response.h  entity_descriptor.h  entity_descriptor_get_config_response.h  entity_descriptor_response.h  enumeration.h  external_port_input_descriptor.h  external_port_input_descriptor_response.h  external_port_output_descriptor.h  external_port_output_descriptor_response.h  (+32 more)
controller/lib/src/: acmp.cpp  acmp.h  acmp_controller_state_machine.cpp  acmp_controller_state_machine.h  adp.cpp  adp.h  adp_discovery_state_machine.cpp  adp_discovery_state_machine.h  aecp.cpp  aecp.h  aecp_controller_state_machine.cpp  aecp_controller_state_machine.h  aem_controller_state_machine.cpp  aem_controller_state_machine.h  aem_string.cpp  audio_cluster_descriptor_imp.cpp  audio_cluster_descriptor_imp.h  audio_cluster_descriptor_response_imp.cpp  audio_cluster_descriptor_response_imp.h  audio_map_descriptor_imp.cpp  audio_map_descriptor_imp.h  audio_map_descriptor_response_imp.cpp  audio_map_descriptor_response_imp.h  audio_unit_descriptor_imp.cpp  audio_unit_descriptor_imp.h  audio_unit_descriptor_response_imp.cpp  audio_unit_descriptor_response_imp.h  audio_unit_get_sampling_rate_response_imp.cpp  audio_unit_get_sampling_rate_response_imp.h  avb_counters_response_imp.cpp  avb_counters_response_imp.h  avb_interface_descriptor_imp.cpp  avb_interface_descriptor_imp.h  avb_interface_descriptor_response_imp.cpp  avb_interface_descriptor_response_imp.h  avb_interface_get_avb_info_response_imp.cpp  avb_interface_get_avb_info_response_imp.h  avdecc_error.h  avdecc_lib_os.h  cassert.h  (+126 more)
controller/lib/src/linux/: bpf.h  log.cpp  log.h  log_imp.cpp  log_imp.h  mkbpf  net_interface_imp.cpp  net_interface_imp.h  notification.h  notification_acmp_imp.cpp  notification_acmp_imp.h  notification_imp.cpp  notification_imp.h  system_layer2_multithreaded_callback.cpp  system_layer2_multithreaded_callback.h  system_message_queue.cpp  system_message_queue.h
controller/lib/src/msvc/: build.h  getopt.c  getopt.h  log.cpp  log.h  log_imp.cpp  log_imp.h  net_interface_imp.cpp  net_interface_imp.h  notification.cpp  notification.h  notification_acmp_imp.cpp  notification_acmp_imp.h  notification_imp.cpp  notification_imp.h  system_layer2_multithreaded_callback.cpp  system_layer2_multithreaded_callback.h  system_message_queue.cpp  system_message_queue.h  system_multithreaded_callback.cpp  system_multithreaded_callback.h
controller/lib/src/osx/: log_imp.cpp  log_imp.h  mac_native_interface_bridge.h  mac_native_interface_bridge.mm  net_interface_imp.cpp  net_interface_imp.h  notification_acmp_imp.cpp  notification_acmp_imp.h  notification_imp.cpp  notification_imp.h  system_layer2_multithreaded_callback.cpp  system_layer2_multithreaded_callback.h  system_message_queue.cpp  system_message_queue.h  system_rx_queue.h
lib/doc/: design.md
lib/include/: aem_string.h  audio_unit_descriptor.h  avb_interface_descriptor.h  avdecc_build.h  avdecc_enum.h  avdecc_string.h  clock_domain_descriptor.h  clock_source_descriptor.h  configuration_descriptor.h  controller.h  descriptor_base.h  end_station.h  entity_descriptor.h  enumeration.h  jack_input_descriptor.h  jack_output_descriptor.h  locale_descriptor.h  net_interface.h  stream_input_descriptor.h  stream_output_descriptor.h  strings_descriptor.h  system.h
lib/src/: adp.cpp  adp.h  adp_discovery_state_machine.cpp  adp_discovery_state_machine.h  aecp.h  aem_controller_state_machine.cpp  aem_controller_state_machine.h  audio_unit_descriptor_imp.cpp  audio_unit_descriptor_imp.h  avb_interface_descriptor_imp.h  avdecc_string.cpp  clock_domain_descriptor_imp.h  clock_source_descriptor_imp.h  configuration_descriptor_imp.cpp  configuration_descriptor_imp.h  controller_imp.cpp  controller_imp.h  descriptor_base_imp.cpp  descriptor_base_imp.h  end_station_imp.cpp  end_station_imp.h  entity_descriptor_imp.h  jack_input_descriptor_imp.cpp  jack_input_descriptor_imp.h  locale_descriptor_imp.h  (+8 more)
(+12 files in other folders)
